# OpenWoof_Engine

./: .gitattributes  .gitignore  README.md  release-manifest.json
app/installers/windows/: README.md  SHA256SUMS
app/portable/windows/: SHA256SUMS
bundled-content/: README.md
bundled-content/characters/: anneta.json  calloway.json  harald_red_horns.json  kaira.json  kazimir_von_ashenberg.json  knox.json  lumiel.json  peony.json  quinn_warwick.json  sydney.json  woofy_chan.json  zeke.json
bundled-content/lorebooks/earth_2020_dimension/: arcanum.json
bundled-content/lorebooks/fantasy_dimension/: arcanum.json
bundled-content/lorebooks/master_dimension/: arcanum.json
bundled-content/portraits/: manifest.json
bundled-content/scenarios/: blackout_delivery.json  calloway_facility_rescue.json  goldfish_teahouse_undercover.json  kazimir_old_mansion.json  newcomer_city_evening.json  rainbound_bus_station.json  rookie_dungeon_escort.json
content-templates/: character.template.json  scenario.template.json
content-templates/lorebook/: arcanum.template.json
content-templates/lorebook/lore/: lore-entry.template.json
dependency-manifests/npm/: package-lock.json  package.json
dependency-manifests/tauri/: tauri.conf.json
tauri-shell/: README.md  package-lock.json  package.json
tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
tauri-shell/src-tauri/capabilities/: default.json
tauri-shell/src-tauri/icons/: icon.icns
tauri-shell/src-tauri/src/: lib.rs
tauri-shell/web-bundle/: index.html  splash.html
tauri-shell/web-bundle/assets/: agents-BCQ-f8tj.js  (+89 more)
(+121 files in other folders)
