[package]
name = "woofychatty"
version = "0.1.0"
description = "WoofyChatty — Interactive Fiction Engine"
authors = ["WoofyChatty"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
argon2 = "0.5"
chrono = "0.4"
dirs = "5"
rand = "0.8"
